@startuml
skinparam linetype ortho
'top to bottom direction
left to right direction

class Main {
    +main(String[]): void
}

class GraphAlgorithmExecutor {
    +runSequentialBFS(String, int, List<Double>, List<Double>): void
    +runSequentialDFS(String, int, List<Double>, List<Double>): void
    +runSequentialMethods(String, int, int): void
    -getMemoryUsage(): long
    -monitorMemoryUsage(Runnable): double
    -forceGarbageCollection(): void
}

class TreeAlgorithmExecutor {
    +runTreeBFS(String, List<Double>, List<Long>): void
    +runTreeDFS(String, List<Double>, List<Long>): void
    +runTreeMethods(String, Scanner, int): void
    +readTreeFromFile(String): TreeNode
    +convertToDoubleList(List<Long>): List<Double>
    -getMemoryUsage(): long
    -monitorMemoryUsage(Runnable): long
    -forceGarbageCollection(): void
}

class GraphReader {
    +readGraph(String): ArrayList<ArrayList<Integer>>
}

class BFSSequential {
    +graphBFS(ArrayList<ArrayList<Integer>>, int): void
    +treeBFS(TreeNode): void
}

class DFSSequential {
    +graphDFS(ArrayList<ArrayList<Integer>>, int): void
    +treeDFS(TreeNode): void
}

class TreeNode {
    -value: int
    -children: ArrayList<TreeNode>
    +TreeNode(int): void
    +addChild(TreeNode): void
    +getValue(): int
    +getChildren(): ArrayList<TreeNode>
}

class ExcelDataRecorder {
    +writeData(String, List<Double>, List<Double>, int, boolean, boolean): void
    +writeHeader(Sheet, boolean): void
    +writeDataInColumns(List<Double>, List<Double>, int, Row): void
    +getNextEmptyRow(Sheet, int): int
}

Main ..> GraphAlgorithmExecutor : executes
Main ..> TreeAlgorithmExecutor : executes
GraphAlgorithmExecutor ..> GraphReader : uses
TreeAlgorithmExecutor ..> TreeNode : uses
BFSSequential ..> TreeAlgorithmExecutor : used by
DFSSequential ..> TreeAlgorithmExecutor : used by
TreeNode ..> TreeAlgorithmExecutor : used by
BFSSequential ..> GraphAlgorithmExecutor : used by
DFSSequential ..> GraphAlgorithmExecutor : used by
ExcelDataRecorder ..> GraphAlgorithmExecutor : logs data
ExcelDataRecorder ..> TreeAlgorithmExecutor : logs data

@enduml
